Remove openclaw (#218)
* removal

* ok

---------
